[metadata]
name = email-sdk
version = 0.1.0
description = An SDK for email validation using the Hunter.io API with in-memory storage.
long_description = file: README.md
long_description_content_type = text/markdown
author = Hamza Khchine
author_email = hamzakhchine@gmail.com
url = https://github.com/khchine5/email-sdk
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    requests>=2.20.0
python_requires = >=3.6

[options.extras_require]
dev =
    flake8
    mypy
    coverage
    isort
    pytest
    django-stubs
    pydantic
    django_coverage_plugin

[options.package_data]
* = *.txt, *.rst

[flake8]
dictionaries = en_US,python,technical,django
ignore = W503,WPS226,WPS227,WPS235,WPS473,WPS601,DAR101,DAR201,DAR301,DAR401
max-line-length = 120
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv

[mypy]
python_version = 3.11
allow_redefinition = False
check_untyped_defs = True
disallow_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
no_implicit_optional = True
strict_optional = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
plugins = mypy_django_plugin.main,pydantic.mypy

[coverage:run]
omit = *migrations*, *tests*
plugins = django_coverage_plugin

[isort]
line_length = 120
include_trailing_comma = True
use_parentheses = True
multi_line_output = 3
